// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostElementItem renders post with basic informations 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata">
          <!---->
          <!----> <small class="has-text-grey">December 2, 2020</small>
          <!---->
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostElementItem shows the author if actor is a group member 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata">
          <!----> <small class="has-text-grey"><span class="icon is-small"><i class="mdi mdi-earth"></i></span>Public</small> <small class="has-text-grey">December 2, 2020</small> <small class="has-text-grey">Created by {username}</small>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostElementItem shows the draft tag if post is a draft 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata"><span class="tag is-warning is-small"><span class="">Draft</span>
          <!----></span>
          <!----> <small class="has-text-grey">December 2, 2020</small>
          <!---->
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostElementItem tells if the post is accessible only through link 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata">
          <!----> <small class="has-text-grey"><span class="icon is-small"><i class="mdi mdi-link"></i></span>Accessible through link</small> <small class="has-text-grey">December 2, 2020</small>
          <!---->
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostElementItem tells if the post is accessible only to members 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata">
          <!----> <small class="has-text-grey"><span class="icon is-small"><i class="mdi mdi-lock"></i></span>Accessible only to members</small> <small class="has-text-grey">December 2, 2020</small>
          <!---->
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostElementItem tells if the post is public when the actor is a group member 1`] = `
<a href="/p/my-blog-post-some-uuid" class="post-minimalist-card-wrapper">
  <div class="title-info-wrapper">
    <div class="media">
      <div class="media-left"><span class="icon is-large"><i class="mdi mdi-post mdi-48px"></i></span></div>
      <div class="media-content">
        <p class="post-minimalist-title">My Blog Post</p>
        <div class="metadata">
          <!----> <small class="has-text-grey"><span class="icon is-small"><i class="mdi mdi-earth"></i></span>Public</small> <small class="has-text-grey">December 2, 2020</small> <small class="has-text-grey">Created by {username}</small>
        </div>
      </div>
    </div>
  </div>
</a>
`;
